src/objects/MMCOMP__c.object
<CustomObject>
    <description>(MBI) - MMD - Firm Level Profile/Summary information -- Plan Sponsor &amp; Consultant</description>
    <fields>
        <fullName>ADDRESS__c</fullName>
        <label>MMD Address</label>
        <length>126</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFFILIATE__c</fullName>
        <label>MMD Affiliate</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AGENTNAME__c</fullName>
        <label>If No, Securities Lending Agent</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANN_CONTRIB_LOC__c</fullName>
        <label>Annl Contributions (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ANN_CONTRIB__c</fullName>
        <label>Annl Contributions ($000)</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AUTRANET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autranet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BANKAFF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Affiliate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BNYESI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BNY/ESI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOSINSTIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boston Institutional Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BROKAFF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Affiliate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAPINSTIT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capital Institutional Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CATEGORY__c</fullName>
        <label>MMD Category Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHG_ASST_MGR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chg/Add Managers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>MMD City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMMISSNAME__c</fullName>
        <label>If Yes, Responsible for Dir Busn</label>
        <length>105</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMMISS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Directs Comms for Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CONMTRANS__c</fullName>
        <label>International Company Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONSULTYR__c</fullName>
        <label>Year began Consulting</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONVERT_PLAN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convert DB to DC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COUNTRY__c</fullName>
        <label>MMD Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CROTHER__c</fullName>
        <label>Other Comm Recapture Firm</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURR_CODE__c</fullName>
        <label>Local Currency Conversion Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURR_FOR_EX__c</fullName>
        <label>Currency/Foreign Exch</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTBANK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Custodial Bank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Assets_Mil__c</fullName>
        <formula>DB_TOTAL__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Assets ($Mil)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_TOTAL_LOC__c</fullName>
        <label>DB Assets (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_TOTAL__c</fullName>
        <label>DB Assets ($000)</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_Assets_Mil__c</fullName>
        <formula>DC_TOTAL__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DC Assets ($Mil)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_TOTAL_LOC__c</fullName>
        <label>DC Assets (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DC_TOTAL__c</fullName>
        <label>DC Assets ($000)</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DERIVATIVES__c</fullName>
        <label>Derivatives</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DONALDSN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donaldson &amp; Co.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EAFE_INDEX__c</fullName>
        <label>EAFE Index</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EF_ASSETS_LOC__c</fullName>
        <label>Endow/Found Assets (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EF_ASSETS__c</fullName>
        <label>Endow/Found Assets ($000)</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EIN_NO__c</fullName>
        <label>EIN #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIOTHER2__c</fullName>
        <label>Other Equity Benchmark 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIOTHER__c</fullName>
        <label>Other Equity Benchmark</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMAIL__c</fullName>
        <label>MMD Email</label>
        <length>136</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMERG_MKTS__c</fullName>
        <label>Emerging Markets</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMPLOYEES__c</fullName>
        <label>Con - Employees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESTATEMGR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Real Estate Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EURO_MKTS__c</fullName>
        <label>European Markets</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empl_Bene_Assets_Mil__c</fullName>
        <formula>PEN_ASSETS__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Empl Bene Assets ($Mil)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endow_Found_Assets_Mil__c</fullName>
        <formula>EF_ASSETS__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Endow/Found Assets ($Mil)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAX__c</fullName>
        <label>MMD Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FIDELITY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fidelity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINADVISOR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FIN_FUTURES__c</fullName>
        <label>Financial Futures</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIOTHER2__c</fullName>
        <label>Other Fixed Income Benchmark 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIOTHER__c</fullName>
        <label>Other Fixed Income Benchmark</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FNDOFFNDS__c</fullName>
        <label>Invests in Fund of Funds</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOFFMGR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund of Funds Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <label>Firm Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000003AVmgEAG</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>HEDGEMGR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hedge Fund Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HEDGE__c</fullName>
        <label>Hedge Funds</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HIREHFMGR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hire Hedge Fund Mgr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIREWMFIRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hire Woman/Minority Firm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IADVISOR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Independent Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IARDCRD__c</fullName>
        <label>IARD/CRD Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <externalId>true</externalId>
        <label>MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INHSETOT_LOC__c</fullName>
        <label>Assets Mng In-House (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INHSETOT__c</fullName>
        <label>Assets Mgd In-House ($000)</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INIT_401K__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiate 401(k) Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INSAFF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Company Affiliate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INSTITMGR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Institutional Money Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INTERNET__c</fullName>
        <label>MMD Internet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INVESTAREAS__c</fullName>
        <label>Future Invest Interests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INVESTYPE1__c</fullName>
        <label>If Yes, to what Inv Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INVESTYPE2__c</fullName>
        <label>If Yes, for what Inv Types</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>INVMGRAFF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investment Manager Affiliate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEHAGGRE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barclay Capital Aggregate Bond Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEHBOND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barclay Capital Govt/Corp Bond Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LPARTNER__c</fullName>
        <label>Limited Partnerships</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LYNCHJONES__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lynch, Jones &amp; Ryan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_MMD_Data_Load__c</fullName>
        <label>Last MMD Data Load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MAILADD__c</fullName>
        <label>MMD Mailing Address</label>
        <length>114</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>METRO__c</fullName>
        <label>MMD Metro Area</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLYNCH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merrill Lynch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMDUPDATE__c</fullName>
        <label>Last MMD Survey</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMD_Category__c</fullName>
        <formula>CASE( CATEGORY__c ,
&quot;05&quot;,&quot;Corporations&quot;,
&quot;5&quot;,&quot;Corporations&quot;,
&quot;10&quot;,&quot;Unions&quot;,
&quot;15&quot;,&quot;Governments&quot;,
&quot;20&quot;,&quot;Endowments&quot;,
&quot;25&quot;,&quot;Private Foundations&quot;,
&quot;28&quot;,&quot;All Other Tax-Exempt&quot;,
&quot;30&quot;,&quot;Health Service - for profit&quot;,
&quot;35&quot;,&quot;Reserve Banks&quot;,
&quot;38&quot;,&quot;Health Service - nonprofit&quot;,
&quot;66&quot;,&quot;Sovereign Wealth Funds&quot;,
&quot;85&quot;,&quot;Invest Mgmt Consultants Main Office&quot;,
&quot;86&quot;,&quot;Invest Mgmt Consultants Regional Office&quot;,
&quot;87&quot;,&quot;Invest Mgmt Consultants Branch Office&quot;,
&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMD Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_NAME__c</fullName>
        <label>MMD Firm Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_WebAccess_Link__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMD WebAccess Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSCIEAFE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSCI-EAFE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NO_CONS__c</fullName>
        <label># Consultants</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NO_MGRS__c</fullName>
        <label># Managers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPTION_WRT__c</fullName>
        <label>Options Writing</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OT_ASSETS_LOC__c</fullName>
        <label>Other Assets (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OT_ASSETS__c</fullName>
        <label>Other Assets ($000)</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Assets_Mil__c</fullName>
        <formula>OT_ASSETS__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Assets ($Mil)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PACRIM_MKTS__c</fullName>
        <label>Pacific Rim Markets</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEN_ASSETS_LOC__c</fullName>
        <label>Empl Bene Assets (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PEN_ASSETS__c</fullName>
        <label>Empl Bene Assets ($000)</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHONE__c</fullName>
        <label>MMD Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PLEXUS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plexus Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRIVMGR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Equity Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Votes Own Proxy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QUANTINVEST__c</fullName>
        <label>Quant Investing Strategies</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REAL_ESTATE__c</fullName>
        <label>Real Estate</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGNUM__c</fullName>
        <label>Int&apos;l Registration #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROCHDALE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rochdale Securities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RUSSELL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Russell 2000</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALOMONSB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Salomon Smith Barney</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SEC_LENDING__c</fullName>
        <label>Securities Lending</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIG_CHG_ASST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chg Asset Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOC_SCREEN__c</fullName>
        <label>Socially Responsible Invest</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SORTNAME__c</fullName>
        <label>MMD Sort Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SP500__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S&amp;P 500</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPMIDCAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S&amp;P MidCap 400</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SPSMCAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S&amp;P SmallCap 600</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STATE_INTL__c</fullName>
        <label>MMD Int&apos;l State/Province</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>MMD State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STOCK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Publicly Traded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SUNTRUST__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sun Trust Robinson Humphrey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SYMBOL1__c</fullName>
        <label>Stock Exchange 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYMBOL2__c</fullName>
        <label>Stock Exchange 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SYMBOL3__c</fullName>
        <label>Stock Exchange 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TACT_ASSET__c</fullName>
        <label>Tactical Asset Alloc</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIAA_CREF__c</fullName>
        <label>TIAA CREF</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TICKER__c</fullName>
        <label>Ticker Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBER__c</fullName>
        <label>Timberland</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_PS_LOC__c</fullName>
        <label>Total Plan Assets (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_PS__c</fullName>
        <label>Total Plan Assets ($000)</label>
        <precision>13</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTASSETS__c</fullName>
        <label>Con - Assets Represented ($000)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTCLIENTS__c</fullName>
        <label>Con - Number of Clients</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Plan_Assets_Mil__c</fullName>
        <formula>TOTAL_PS__c /1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Plan Assets ($Mil)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VALDATE__c</fullName>
        <label>Asset Valuation Date</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WILSHIRE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wilshire 5000</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>MMD Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>MMD Overview</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Overview</pluralLabel>
    <recordTypes>
        <fullName>Consultant</fullName>
        <active>true</active>
        <description>Consultant</description>
        <label>Consultant</label>
    </recordTypes>
    <recordTypes>
        <fullName>PlanSponsor</fullName>
        <active>true</active>
        <description>Plan Sponsor</description>
        <label>Plan Sponsor</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>